--- a/TileEditor/EventEditorWindow/EventEditorWindow.xaml
+++ b/TileEditor/EventEditorWindow/EventEditorWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TileEditor.EventEditorWindow" xmlns:shell="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
         mc:Ignorable="d"
+        WindowStartupLocation="CenterOwner"
         d:DataContext="{d:DesignInstance Type=local:EventEditorViewModel}"
         Title="{Binding ToEdit.Type}" Height="450" Width="800">
 
