--- a/TileEditor/EntityEditorWindow.xaml
+++ b/TileEditor/EntityEditorWindow.xaml
@@ -1,14 +1,14 @@
-﻿<Window x:Class="TileEditor.EntityEditorWindow.EntityEditorWindow"
+﻿<Window x:Class="TileEditor.EntityEditorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TileEditor.EntityEditorWindow" xmlns:shell="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
+        xmlns:local="clr-namespace:TileEditor" xmlns:shell="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
+        d:DataContext="{d:DesignInstance Type=local:EntityEditorWindowViewModel}"
         mc:Ignorable="d"
         WindowStartupLocation="CenterOwner"
-        d:DataContext="{d:DesignInstance Type=local:EntityEditorWindowViewModel}"
         Title="EntityEditorWindow" Height="450" Width="800">
-   
+
     <WindowChrome.WindowChrome>
         <shell:WindowChrome CaptionHeight="36" GlassFrameThickness="0" CornerRadius="0" ResizeBorderThickness="5"/>
     </WindowChrome.WindowChrome>
@@ -67,7 +67,9 @@
 
                             <!-- Content -->
                             <Grid Grid.Row="2">
-                                <ContentPresenter Content="{TemplateBinding Content}" />
+                                <AdornerDecorator>
+                                    <ContentPresenter Content="{TemplateBinding Content}" />
+                                </AdornerDecorator>
                             </Grid>
 
                         </Grid>
@@ -79,61 +81,86 @@
         <Style TargetType="Grid">
             <Style.Resources>
                 <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
-                    <Setter Property="Margin" Value="0,0,0,10" />
+                    <Setter Property="Margin" Value="0,0,0,0" />
                     <Setter Property="Height" Value="32" />
+
+                    <Setter Property="Validation.ErrorTemplate">
+                        <Setter.Value>
+                            <ControlTemplate>
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="auto"/>
+                                        <RowDefinition Height="*" />
+                                    </Grid.RowDefinitions>
+                                    <AdornedElementPlaceholder Grid.Row="0" x:Name="placeholder"/>
+                                    <TextBlock Grid.Row="1" FontSize="16" Foreground="Red" Text="{Binding ElementName=placeholder, Path=AdornedElement.(Validation.Errors)[0].ErrorContent}" ></TextBlock>
+                                </Grid>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                    <Style.Triggers>
+                        <Trigger Property="Validation.HasError" Value="True" >
+                            <Setter Property="BorderBrush" Value="Red" />
+                            <Setter Property="ToolTip"
+                                    Value="{Binding RelativeSource={x:Static RelativeSource.Self}, 
+                                                    Path=(Validation.Errors)[0].ErrorContent }"/>
+                        </Trigger>
+                    </Style.Triggers>
                 </Style>
 
                 <Style BasedOn="{StaticResource {x:Type Button}}" TargetType="Button">
-                    <Setter Property="Margin" Value="5,0,0,10" />
+                    <Setter Property="Margin" Value="5,5,5,0" />
                     <Setter Property="Height" Value="32" />
                 </Style>
             </Style.Resources>
         </Style>
     </Window.Resources>
 
-
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="50"/>
-        </Grid.RowDefinitions>
-
-        <Grid Grid.Row="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-
+    <StackPanel VerticalAlignment="Center" Margin="5">
+        <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
             </Grid.RowDefinitions>
 
-            <Label Grid.Row="0" Grid.Column="0">Name</Label>
-            <TextBox Grid.Row="0" Grid.Column="1" Margin="0, 0, 0, 25" x:Name="tbEntityName">
-                <TextBox.Text>
-                    <Binding Path="Name" UpdateSourceTrigger="PropertyChanged">
-                    </Binding>
-                </TextBox.Text>
-            </TextBox>
-            
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+
+                <Label Grid.Row="0" Grid.Column="0">Name</Label>
+                <TextBox Grid.Row="0" Grid.Column="1"  x:Name="tbEntityName" Margin="0, 0, 0, 25">
+                    <TextBox.Text>
+                        <Binding Path="Name" UpdateSourceTrigger="PropertyChanged" ValidatesOnDataErrors="True">
+                        </Binding>
+                    </TextBox.Text>
+                </TextBox>
+
+            </Grid>
+
+            <Separator Grid.Row="1" />
+
+            <Grid Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Button Grid.Column="0" Command="{Binding OkClickedCommand}"  
+                        IsEnabled="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=HasValidationErrors}">
+                    OK
+                </Button>
+                
+                <Button Grid.Column="1" Command="{Binding CancelClickedCommand}">Cancel</Button>
+            </Grid>
+
         </Grid>
-        
-        <Separator Grid.Row="1" />
-
-        <Grid Grid.Row="2">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
-            <Button
-                Grid.Column="0"
-                Command="{Binding OkClickedCommand}">OK</Button>
-
-            <Button 
-                Grid.Column="1"
-                Command="{Binding CancelClickedCommand}">Cancel</Button>
-        </Grid>
-
-    </Grid>
+    </StackPanel>
 </Window>
