--- a/TileEditor/LayerEditor.xaml
+++ b/TileEditor/LayerEditor.xaml
@@ -33,8 +33,7 @@
                     <Grid>
                         <Image Width="64" Height="64">
                             <Image.Source>
-                                <Binding Path="TexturePath"></Binding>
-                                <!-- TODO: itt most databind error van. EmptyTile típust visszahozni? -->
+                                <Binding Path="Texture"></Binding>
                             </Image.Source>
                         </Image>
                         <TextBlock Foreground="White" 
