Statusbar with mouse position

--- a/TileEditor/App.xaml
+++ b/TileEditor/App.xaml
@@ -137,6 +137,10 @@
             </Setter>
         </Style>
 
+        <Style TargetType="StatusBar">
+            <Setter Property="Background" Value="#4D4D66" />
+        </Style>
+
 
         <ControlTemplate x:Key="horizontalScrollbar" TargetType="ScrollBar">
             <Grid>
