--- a/TileEditor/LayerEditor.xaml
+++ b/TileEditor/LayerEditor.xaml
@@ -56,6 +56,7 @@
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" Orientation="Horizontal">
@@ -110,5 +111,13 @@
                 </ItemsControl>
             </StackPanel>
         </ScrollViewer>
+        <StackPanel Grid.Row="3">
+            <StatusBar>
+                <StatusBarItem Content="X:"/>
+                <StatusBarItem Content="{Binding CurrentMousePosition.X}" />
+                <StatusBarItem Content="Y:"/>
+                <StatusBarItem Content="{Binding CurrentMousePosition.Y}" />
+            </StatusBar>
+        </StackPanel>
     </Grid>
 </UserControl>
